--- a/docroot/themes/custom/site/src/scss/custom/components/_footer.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_footer.scss
@@ -155,7 +155,7 @@ ul.layout-navigation__link {
     text-transform: uppercase;
 }
 .panel-heading .panel-title a {
-    color: #FFF!important;
+    color: #FFF;
 }
 .col-xs-12 a {
     color: #fff!important;
