--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -101,7 +101,7 @@ view_mode ? view_mode|clean_class,
                 {{ content.body }}
             </div>
             <div class="col-sm-6">
-                <h4>{{ 'Kom ud at rejse'|trans }}:</h4>
+                <h4 class="long-course-heading-sidebar">{{ 'Kom ud at rejse'|trans }}:</h4>
                 <h6 class="color-gray">{{ 'Skæddersy dit ophold paå tværs af fagpakker'|trans }}</h5>
 
                 <div class="row">
@@ -111,7 +111,7 @@ view_mode ? view_mode|clean_class,
                         </div>
                     {% endfor %}
                 </div>
-                <h4>{{ 'Fagpakker'|trans }}:</h4>
+                <h4 class="long-course-heading-sidebar">{{ 'Fagpakker'|trans }}:</h4>
                 <h6 class="color-gray">{{ 'Skæddersy dit ophold på tværs af fagpakker'|trans }}</h6>
 
                 <div class="panel-group" id="accordionClassPackages">
@@ -145,7 +145,7 @@ view_mode ? view_mode|clean_class,
                 
         <div class="row lc-btn-box">
             <div class="col-xs-12">
-                <a href="{{ url('vih_subscription.long_course_order_create', {'course': node.id}) }} " class="btn btn-arrow btn-center">{{ "Begynd nu"|trans }}</a>
+                <a href="{{ url('vih_subscription.long_course_order_create', {'course': node.id}) }} " class="btn-arrow btn-center">{{ "Begynd nu"|trans }}</a>
             </div>
         </div>
 
