--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class-package--vih-class-package-accordion.html.twig
@@ -72,7 +72,7 @@
 
                   <div class="modal-body">
                       <h4>{{ name }}</h4>
-                      <p>
+                      <p class="modal-course-description">
                           {{ description|striptags }}
                       </p>
 
