--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
@@ -37,10 +37,13 @@
     }
     h5 {
       position:absolute; 
-      bottom: -1px;
+      bottom: 8px;
       right: 20px;
     }
   }
+    .panel-heading label {
+        border-left: 1px solid #ddd!important;
+    }
 /*  .vih-col-center {
     display: flex; 
     align-items: center; 
