added multiple expand panels

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
@@ -27,8 +27,9 @@
             <div class="panel panel-default white-border-bottom">
                 <div class="panel-heading">
                     <h4 class="panel-title">
-                        <a class="accordion-toggle collapsed" data-toggle="collapse"
-                           data-parent="#course-periods-accordion"
+                        <a class="accordion-toggle collapsed" data-toggle="collapse" 
+{#                           data-target="#course-periods-accordian-{{ periodDelta }}-{{ slotDelta }}"#}
+{#                           data-parent="#course-periods-accordion"#}
                            href="#course-periods-accordian-{{ periodDelta }}-{{ slotDelta }}" aria-expanded="false">
                             {{ courseSlot['title'] }}
                         </a>
