--- a/docroot/themes/custom/site/templates/custom/header.html.twig
+++ b/docroot/themes/custom/site/templates/custom/header.html.twig
@@ -73,5 +73,8 @@
         {% if page.header_navigation %}
             {{ page.header_navigation }}
         {% endif %}
+        <div class="logo-wrapper-mobile">
+        <img src="{{ base_path ~ directory }}/dist/images/vih_logo_white.svg">
+        </div>
     </div>
 </header>
