paragraph file title style fix

--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_paragraph-type-file.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_paragraph-type-file.scss
@@ -39,6 +39,13 @@
   }
 }
 
+.paragraph.paragraph--type--file.paragraph--view-mode--default{
+  & .field.field--name-field-heading.field--type-string{
+      margin-top: 0px;
+      margin-bottom: 20px !important;
+    }
+}
+
 .layout__news{
    .angled-background-color.paragraph.paragraph--type--file{
      .angled-background-inner:before{
