--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_paragraph-type-file.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_paragraph-type-file.scss
@@ -24,8 +24,7 @@
     & .file.file--mime-application-pdf.file--application-pdf{
     background-color: white;
     color: #00a5e2;
-    border-bottom: 1px solid #ccc;
-    border-top: 1px solid #ccc;
+    border: 1px solid #00a5e2;
     padding: 5px;
     }
     & .field--item .paragraph-file-icon{
