--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_paragraph-type-file.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_paragraph-type-file.scss
@@ -22,9 +22,9 @@
       font-size: 1.5em;
     }
     & .file.file--mime-application-pdf.file--application-pdf{
-    background-color: white;
+    background-color: none!important;
     color: #00a5e2;
-    border: 1px solid #00a5e2;
+    border: 1px solid #00a5e2!important;
     padding: 5px;
     }
     & .field--item .paragraph-file-icon{
@@ -32,7 +32,6 @@
       height: 40px;
       background-size: cover;
       background-repeat: no-repeat;
-      background-color: white;
       margin: 10px !important;
     }
   }
