--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1766,6 +1766,9 @@ ul.layout-navigation.layout-navigation--full-width.layout--large-screen-only.dro
 .course-periods-accordion .field--name-description p {
     font-weight: bold!important;
 }
+.page-node-type-news article .field--name-field-image {
+    display: none;
+}
 
 .file--mime-application-pdf {
     background: none!important;
