Changes to pages (news, event, taxonomy, teacher etc.)

--- a/docroot/themes/custom/site/templates/user/user--full.html.twig
+++ b/docroot/themes/custom/site/templates/user/user--full.html.twig
@@ -18,9 +18,9 @@
 #}
 <article{{ attributes }}>
 
-  <div class="row" style="background-color: #00a5e2; color: #fff !important; padding-left: 50px; padding-right: 50px; padding-top: 25px; padding-bottom: 50px;">
+  <div class="row">
     <div class="col-lg-8 col-md-8">
-    <h2 style="color:#fff; font-weight: bold;">{{ content.field_user_name_first[0] }} {{ content.field_user_name_last[0] }}, {{ content.field_vih_user_title[0] }}</h2>
+    <h2>{{ content.field_user_name_first[0] }} {{ content.field_user_name_last[0] }}, {{ content.field_vih_user_title[0] }}</h2>
         {{ content.field_vih_user_about[0] }}
     </div>
 
