--- a/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu.html.twig
+++ b/docroot/themes/custom/site/templates/menu/menu--main--site-main-menu.html.twig
@@ -13,10 +13,10 @@
 
           {# List #}
           {% if menu_level == 0 %}
-    <ul {{ attributes.addClass('layout-navigation layout-navigation--full-width layout--large-screen-only') }} >
+    <ul {{ attributes.addClass('layout-navigation', 'layout-navigation--full-width', 'layout--large-screen-only') }} >
     {% else %}
     
-    <ul{{ attributes.addClass( 'layout-navigation__dropdown-menu') }}>
+    <ul{{ attributes.addClass('layout-navigation__dropdown-menu').removeClass('layout-navigation--full-width') }}>
         {% endif %}
 
         {% for item in items %}
@@ -26,7 +26,7 @@
 
             {# List item #}
             {% if item.below and item.is_expanded %}
-            <li{{ item.attributes.addClass('dropdown layout-navigation__dropdown', item_classes) }}>
+            <li{{ item.attributes.addClass('dropdown', 'layout-navigation__dropdown', item_classes) }}>
             {% else %}
                 <li{{ item.attributes.addClass('layout-navigation__link', item_classes) }}>
             {% endif %}
@@ -36,7 +36,7 @@
 
             {# Submenu #}
             {% if item.below %}
-                {{ menus.menu_links(item.below, attributes.removeClass('layout-navigation layout--large-screen-only').addClass('dropdown-menu'), menu_level + 1) }}
+                {{ menus.menu_links(item.below, attributes.removeClass('layout-navigation', 'layout--large-screen-only', 'layout-navigation--full-width').addClass('dropdown-menu'), menu_level + 1) }}
             {% endif %}
 
             </li>
