--- a/docroot/themes/custom/site/templates/user/user.html.twig
+++ b/docroot/themes/custom/site/templates/user/user.html.twig
@@ -43,7 +43,7 @@
    </div>
 
     </div>
-     <div class="col-md-6">
+     <div class="col-md-6 user-section">
      <div class="image-with-overlay">
 <div class="image-overlay"><p>{{ content.field_user_name_first }}{{ content.field_user_name_last }}</p></div>
 {{ content.field_user_picture }}
