User page updated

--- a/docroot/themes/custom/site/templates/user/user.html.twig
+++ b/docroot/themes/custom/site/templates/user/user.html.twig
@@ -48,6 +48,7 @@
 <div class="image-overlay"><p>{{ content.field_user_name_first }}{{ content.field_user_name_last }}</p></div>
 {{ content.field_user_picture }}
 </div>    
+<!--
     <dl>
         <dd>  <div class="user-title">
       <h5> {% trans %}
@@ -58,4 +59,4 @@
       <h5> {% trans %}
  Fødselsdag:
   {% endtrans %} </h5>
-   </div></dd> <dt>{{ content.field_user_birthday }}</dt> </dl> {% endif %} </div> </article>
+   </div></dd> <dt>{{ content.field_user_birthday }}</dt> </dl>--> {% endif %} </div> </article>
