--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1833,6 +1833,9 @@ ul.layout-navigation {
     border: 1px solid;
     margin-bottom: 10px;
 }
+.teacher-contact-info {
+    width: 300px;
+}
 @media only screen and (min-width: 980px) {
 //.layout--fixed-header {
 //    overflow: hidden!important;
