--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1836,6 +1836,9 @@ ul.layout-navigation {
 .teacher-contact-info {
     width: 300px;
 }
+.paragraph--type--file .angled-background-inner:before {
+    background: none!important;
+}
 @media only screen and (min-width: 980px) {
 //.layout--fixed-header {
 //    overflow: hidden!important;
