--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_paragraph-type-file.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_paragraph-type-file.scss
@@ -23,8 +23,7 @@
     }
     & .file.file--mime-application-pdf.file--application-pdf{
     background-color: none!important;
-    color: #00a5e2;
-    border: 1px solid #00a5e2!important;
+    border: 1px solid #ddd!important;
     padding: 5px;
     }
     & .field--item .paragraph-file-icon{
