taxonomy 'Class' paragraph fields show

--- a/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class-package--full.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class-package--full.html.twig
@@ -195,9 +195,10 @@ view_mode ? view_mode|clean_class,
         </div>
       </div>
     </div>
-    <div class="row paragraphs">
-{#      {{ content.field_paragraphs }}#}
-    </div>
   </div>
+    <div class="row paragraphs">
+      {{ content.field_class_package_paragraph }}
+    </div>
+
 
 </article>
