Taxonomy Class package template clean

--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class_package.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class_package.scss
@@ -1,3 +1,10 @@
 .vih_class_package.vih_class_package_accordion {
 
 }
+article.vih_class_package {
+  & .field.field--name-field-class-package-paragraph.field--type-entity-reference-revisions{
+    & .field__items{
+      border: none;
+    }
+  }
+}
