Taxonomy Class with paragraphs and template fix

--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
@@ -50,3 +50,10 @@
     min-height: 107px;
   }*/
 }
+article.vih_class {
+  & .field.field--name-field-class-package-paragraph.field--type-entity-reference-revisions{
+    & .field__items{
+      border: none;
+    }
+  }
+}
