user becomes a field in the paragraph of type "TEACHER CLASS DESCRIPTION"

--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_loader.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_loader.scss
@@ -2,3 +2,4 @@
 @import 'list-of-news-teasers';
 @import 'video';
 @import '_paragraph-type-file';
+@import '_paragraph-type-teacher-class-description';
