Field class updated

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -124,6 +124,10 @@ html {
     padding-bottom: 100px;
 }
 
+.path-taxonomy .field--name-field-class-package-paragraph .field--name-field-heading {
+    display: none!important;
+}
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
